force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__EndPoint__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>