force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Metadata_ServerUrl__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Metadata_ServerUrl__c</fullName>
    <label>Metadata ServerUrl</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>