force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__OrganizationName__c</fullName>
    <label>OrganizationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>