force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__OrgId__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__OrgId__c</fullName>
    <label>Org Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>