force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Satge__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Satge__c</fullName>
    <formula>if(cwbtool__Is_Active__c,&apos;Active&apos;,&apos;InActive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satge</label>
    <type>Text</type>
</CustomField>