force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Session_Time__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Session_Time__c</fullName>
    <formula>( Now()- LastModifiedDate ) * 24 * 60 * 60 
+ ( VALUE(MID(TEXT(Now()),18,2)) - VALUE(MID(TEXT(LastModifiedDate ),18,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>