force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__SessionId__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__SessionId__c</fullName>
    <label>SessionId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>