force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__UserEmail__c</fullName>
    <label>UserEmail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>