force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__UserFullName__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__UserFullName__c</fullName>
    <label>UserFullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>