force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__UserId__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__UserId__c</fullName>
    <label>UserId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>