force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__UserName__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>