force-app/main/default/objects/cwbtool__Connection__c/fields/cwbtool__Valid_Second__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Valid_Second__c</fullName>
    <label>Valid Second</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>